Fixed mobile layout bug in tabs

--- a/_sass/modules/_tab.scss
+++ b/_sass/modules/_tab.scss
@@ -9,9 +9,6 @@
   border-radius: .75rem;
 }
 
-.tab-panel {
-}
-
 input[type="radio"].tab {
   @extend .horizontal;
   + label {
@@ -22,9 +19,11 @@ input[type="radio"].tab {
     position: relative;
     border-radius: .5rem;
     grid-template-columns: 1fr;
+    text-align: center;
     @include break($break-xsmall) {
       grid-template-columns: 1.5rem 1fr;
       padding: .75rem;
+      text-align: left;
     }
     &:first-of-type {
       text-indent: 0rem;
